--- a/telefon-anrufliste.yaml
+++ b/telefon-anrufliste.yaml
@@ -17,7 +17,7 @@ trigger:
     for:
       hours: 0
       minutes: 0
-      seconds: 1
+      seconds: 2
   - platform: state
     entity_id:
       - sensor.fritz_box_7490_anrufmonitor_telefonbuch
@@ -43,6 +43,17 @@ trigger:
     enabled: false
     alias: Zeit für AB nach X Sekunden (abzgl. 1 Sekunde)
     id: "5"
+  - alias: Feed bereinigen
+    platform: state
+    entity_id:
+      - sensor.fritz_box_7490_anrufmonitor_telefonbuch
+    for:
+      hours: 0
+      minutes: 0
+      seconds: 2
+    to: idle
+    id: "6"
+    enabled: true
 condition:
   - condition: or
     conditions:
@@ -51,6 +62,7 @@ condition:
           - "1"
           - "2"
           - "5"
+          - "6"
       - condition: and
         conditions:
           - condition: trigger
@@ -248,4 +260,15 @@ action:
         data: {}
         target:
           entity_id: input_boolean.telefon_klingelt
+  - if:
+      - condition: trigger
+        id:
+          - "6"
+    then:
+      - service: input_text.set_value
+        data:
+          value: unknown
+        target:
+          entity_id: input_text.telefon_feed
+    alias: Feed bereinigen
 mode: single
